--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,18 @@
   "name": "Pomodoro Clock",
   "icons": [
     {
-      "src": "timer-192-black.png",
+      "src": "timer-32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "timer-192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "timer-512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
